--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                   <div align="center">
 <p><a href="https://play.google.com/store/apps/details?id=bachi.strteaming">
 <img src="https://github.com/serviciosinformaticoselbachi/REPROTRUEQ/blob/master/IMAGES/logoGOOGLEPLAY.png?raw=true" alt="GOOGLEPLAY" width="150px" height="auto"margin="1%"></p>
-                    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/5.js?i=5ofqbz3d4ea&amp;m=0&amp;c=ff0000&amp;cr1=ffffff" async="async"></script>
+                   <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5pcpwg9046x&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
 					  </ul>
                 </div>
                 
